fix(commandline): double scrollbar

--- a/frontend/src/styles/commandline.scss
+++ b/frontend/src/styles/commandline.scss
@@ -15,6 +15,7 @@
   overflow: hidden;
 
   .modal {
+    overflow: hidden;
     max-width: 600px;
     width: 100%;
     background: var(--bg-color);
